@@ -1,3 +1,7 @@
+2005-06-22 Mikhail Khodjaiants
+	Bug 96563: "Go to file" is ghosted on breakpoints (outside projects?).
+	* CDebugModelPresentation.java
+
 2005-06-20 Mikhail Khodjaiants
 	Bug 93855: Changing values in detailed pane doesn't work the first time after the view is loaded.
 	+ DetailsViewerConfiguration.java
